Add data to menu-delivery.html; Modify menu.css

--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -179,17 +179,47 @@
   <p class="description">Chef's Special Dishes are served with White Rice.</p>
   <!-- START ul.chefs-special -->
   <ul class="leaders">
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
-    <li><span>Lemon Chicken</span><span>10.95</span></li>
-    <li><span>Orange Chicken</span><span>10.95</span></li>
-    <li><span>Orange Shrimp</span><span>12.95</span></li>
-    <li><span>Happy Family &mdash; <i>Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
-    <li><span>Four Seasons &mdash; <i>Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce.</i></span><span>14.95</span></li>
-    <li><span></span><span></span></li>
-    <li><span></span><span></span></li>
+    <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
+
+    <li><span class="dish">Lemon Chicken</span><span>10.95</span></li>
+
+    <li><span class="dish">Orange Chicken</span><span>10.95</span></li>
+
+    <li><span class="dish">Orange Shrimp</span><span>12.95</span></li>
+
+    <li><span class="dish">Happy Family<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
+
+    <li><span class="dish">Four Seasons<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
+
+    <li><span class="dish">Triple Crown<i class="dish-desc"> &mdash; Chicken, Beef and Shrimp with mixed vegetables in a brown sauce</i></span><span>13.95</span></li>
+
+    <li><span class="dish">Lover's Delight<i class="dish-desc"> &mdash; two dishes in one, Hunan Beef and General's Chicken</i></span><span>14.95</span></li>
+
+    <li><span class="dish">Salt and Pepper Squid<i class="dish-desc"> &mdash; Cantonese-style Calamari</i></span><span>14.95</span></li>
+
+    <li><span class="dish">Salt and Pepper Shrimp</span><span>14.95</span></li>
+
+    <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Dragon and Phoenix<i class="dish-desc"> &mdash; two dishes in one, General's Chicken and Hot and Spicy Shrimp</i></span><span>14.95</span></li>
+
+    <li><span class="dish">Seafood Pan Fried Noodles<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid with Mixed Vegetables on top of Crispy, Pan-fried Noodles in a Brown Sauce</i></span><span>17.95</span></li>
+
+    <li><span class="dish">Twin Cities Hunan Style<i class="dish-desc"> &mdash; Shrimp and Scallops stir-fry with Mixed Vegetables Hunan Style</i></span><span>16.95</span></li>
+
+    <li><span class="dish">Seafood Delight<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid stir fried with Mixed Vegetables</i></span><span>17.95</span></li>
+
+    <li><span class="dish">Seven Stars<i class="dish-desc"> &mdash; Chicken, Roast Pork, Crab Meat and Mixed Vegetables topped with seven Jumbo Fried Shrimp</i></span><span>16.95</span></li>
+
+    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
+    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
+    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
 
   </ul>
 </div>
+
+
 
 
 
