--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -1,4 +1,4 @@
-ul.leaders {
+/*ul.leaders {
   max-width: 40em;
   padding: 0;
   overflow-x: hidden;
@@ -26,7 +26,7 @@ ul.leaders span+span {
   float: right;
   padding-left: 0.33em;
   background: white
-}
+}*/
 
 .description {
   font-weight: 500;
@@ -52,4 +52,49 @@ ul.leaders span+span {
 h4 {
   margin: 0 0 0 -2%;
   font-size: 1.15em;
+}
+
+ul.leaders {
+  max-width: 45em;
+  padding: 0;
+  overflow-x: hidden;
+  list-style: none;
+  font-weight: 400;
+  font-size: .85em;
+  color: #3f454d;
+  /*line-height: 18px;*/
+  margin-top: .4em;
+}
+
+ul.leaders li:after {
+  float: left;
+  width: 0;
+  white-space: nowrap;
+  content: ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . " ". . . . . . . . . . . . . . . . . . . . "
+}
+
+ul.leaders span:first-child {
+  padding-right: 0.33em;
+  background: white
+}
+
+ul.leaders span+span {
+  float: right;
+  padding-left: 0.33em;
+  background: white;
+  position: relative;
+  z-index: 1
+}
+
+.dish {
+  font-weight: 600;
+}
+
+.dish-desc {
+  font-weight: 500;
+  font-size: .9em;
+}
+
+li {
+  margin-bottom: .6em
 }
