--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -55,169 +55,186 @@
         <li>Within 2-mile radius of restaurant.</li>
       </ul>
 
+
+
 <!-- START .menu -->
+
+<img src="../images/delivery/sesame-chicken.jpg" alt="">
+
+<div class="row">
+  <div class="column">
+    <div class="menu-div appetizer-div">
+      <h4>Appetizers</h4>
+      <!-- START ul.appetizers -->
+        <ul class="leaders">
+          <li><span>Egg Rolls (2)</span><span>3.95</span></li>
+          <li><span>Cream Cheese Wontons (6)</span><span>3.95</span></li>
+          <li><span>Fried Spring Rolls (2)</span><span>3.95</span></li>
+          <li><span>Chicken Wings (6)</span><span>5.95</span></li>
+          <li><span>Teriyaki Chicken Wings (6)</span><span>5.95</span></li>
+          <li><span>Fried Dumplings (6)</span><span>5.95</span></li>
+          <li><span>Steamed Dumplings (6)</span><span>5.95</span></li>
+          <li><span>BBQ Pork</span><span>5.95</span></li>
+          <li><span>Teriyaki Chicken (4)</span><span>6.95</span></li>
+          <li><span>Teriyaki Beef (4)</span><span>6.95</span></li>
+          <li><span>Fried Shrimp (6)</span><span>4.95</span></li>
+          <li><span>Fried Scallops (8)</span><span>4.95</span></li>
+          <li><span>Fried Tofu</span><span>4.95</span></li>
+          <li><span>Chicken Nuggets (10)</span><span>3.95</span></li>
+          <li><span>French Fries</span><span>3.95</span></li>
+          <li><span>Fried Sweet Doughnuts (10)</span><span>3.95</span></li>
+          <li><span>Fried Onion Rings</span><span>3.95</span></li>
+        </ul>
+      <!-- END ul.appetizers -->
+    </div>
+
+    <div class="menu-div fried-rice-div">
+      <h4>Fried Rice</h4>
+      <!-- START ul.fried-rice -->
+        <ul class="leaders">
+          <li><span>Vegetable</span><span>7.95</span></li>
+          <li><span>Chicken</span><span>8.95</span></li>
+          <li><span>Roast Pork</span><span>8.95</span></li>
+          <li><span>Beef</span><span>9.95</span></li>
+          <li><span>Shrimp</span><span>9.95</span></li>
+          <li><span>House &mdash; with Chicken, Roast Pork and Shrimp</span><span>10.95</span></li>
+          <li><span>Thai Pineapple &mdash; with Chicken and Shrimp</span><span>10.95</span></li>
+        </ul>
+      <!-- END ul.fried-rice -->
+    </div>
+
+    <div class="menu-div lo-mein-div">
+      <h4>Lo Mein</h4>
+      <p class="description">Lo Mein is made with soft noodles.</p>
+      <!-- START ul.lo-mein -->
+      <ul class="leaders">
+        <li><span>Plain</span><span>6.95</span></li>
+        <li><span>Vegetable</span><span>7.95</span></li>
+        <li><span>Chicken</span><span>8.95</span></li>
+        <li><span>Roast Pork</span><span>8.95</span></li>
+        <li><span>Beef</span><span>995</span></li>
+        <li><span>Shrimp</span><span>10.95</span></li>
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
+        <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
+      </ul>
+      <!-- END ul.lo-mein -->
+    </div>
+
+    <div class="menu-div mai-fun-div">
+      <h4>Mai Fun</h4>
+      <!-- START ul.mai-fun -->
+      <ul class="leaders">
+        <li><span>Vegetable</span><span>7.95</span></li>
+        <li><span>Chicken</span><span>8.95</span></li>
+        <li><span>Roast Pork</span><span>8.95</span></li>
+        <li><span>Beef</span><span>9.95</span></li>
+        <li><span>Shrimp</span><span>10.95</span></li>
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Singapore &mdash; with Pork & Shrimp</span><span>10.95</span></li>
+        <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>11.95</span></li>
+        <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.96</span></li>
+      </ul>
+      <!-- END ul.mai-fun -->
+    </div>
+
+    <div class="menu-div chow-fun-div">
+      <h4>Chow Fun</h4>
+      <!-- START ul.chow-fun -->
+      <ul class="leaders">
+        <li><span>Vegetable</span><span>7.95</span></li>
+        <li><span>Chicken</span><span>8.95</span></li>
+        <li><span>Roast Pork</span><span>8.95</span></li>
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
+        <li><span>Shrimp</span><span>10.95</span></li>
+        <li><span>House &mdash; <i>with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
+        <li><span>Seafood &mdash; <i>with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
+      </ul>
+      <!-- END ul.chow-fun -->
+    </div>
+
+  </div>
+
+  <div class="column">
+    <div class="menu-div kung-pao-div">
+      <h4>Kung Pao</h4>
+      <p class="description">Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
+      <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+      <!-- START ul.kung-pao -->
+      <ul class="leaders">
+        <li><span>Fried Tofu</span><span>7.95</span></li>
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span>Roast Pork</span><span>8.95</span></li>
+        <li><span>Beef</span><span>9.95</span></li>
+        <li><span>Shrimp</span><span>10.95</span></li>
+      </ul>
+
+    </div>
+
+    <div class="menu-div szechuan-div">
+      <h4>Szechuan</h4>
+      <p class="description">Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
+      <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+      <!-- START ul.kung-pao -->
+      <ul class="leaders">
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span>Roast Pork</span><span>8.95</span></li>
+        <li><span>Beef</span><span>9.95</span></li>
+        <li><span>Shrimp</span><span>10.95</span></li>
+      </ul>
+    </div>
+
+    <div class="menu-div chefs-special-div">
+      <h4>Chef's Specials</h4>
+      <p class="description">Chef's Special Dishes are served with White Rice.</p>
+      <!-- START ul.chefs-special -->
+      <ul class="leaders">
+        <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
+
+        <li><span class="dish">Lemon Chicken</span><span>10.95</span></li>
+
+        <li><span class="dish">Orange Chicken</span><span>10.95</span></li>
+
+        <li><span class="dish">Orange Shrimp</span><span>12.95</span></li>
+
+        <li><span class="dish">Happy Family<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
+
+        <li><span class="dish">Four Seasons<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
+
+        <li><span class="dish">Triple Crown<i class="dish-desc"> &mdash; Chicken, Beef and Shrimp with mixed vegetables in a brown sauce</i></span><span>13.95</span></li>
+
+        <li><span class="dish">Lover's Delight<i class="dish-desc"> &mdash; two dishes in one, Hunan Beef and General's Chicken</i></span><span>14.95</span></li>
+
+        <li><span class="dish">Salt and Pepper Squid<i class="dish-desc"> &mdash; Cantonese-style Calamari</i></span><span>14.95</span></li>
+
+        <li><span class="dish">Salt and Pepper Shrimp</span><span>14.95</span></li>
+
+        <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Dragon and Phoenix<i class="dish-desc"> &mdash; two dishes in one, General's Chicken and Hot and Spicy Shrimp</i></span><span>14.95</span></li>
+
+        <li><span class="dish">Seafood Pan Fried Noodles<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid with Mixed Vegetables on top of Crispy, Pan-fried Noodles in a Brown Sauce</i></span><span>17.95</span></li>
+
+        <li><span class="dish">Twin Cities Hunan Style<i class="dish-desc"> &mdash; Shrimp and Scallops stir-fry with Mixed Vegetables Hunan Style</i></span><span>16.95</span></li>
+
+        <li><span class="dish">Seafood Delight<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid stir fried with Mixed Vegetables</i></span><span>17.95</span></li>
+
+        <li><span class="dish">Seven Stars<i class="dish-desc"> &mdash; Chicken, Roast Pork, Crab Meat and Mixed Vegetables topped with seven Jumbo Fried Shrimp</i></span><span>16.95</span></li>
+
+        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
+        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
+        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+
+
+      </ul>
+    </div>
+
+  </div>
+
+</div>
 <div class='menu'>
 
-<div class="menu-div appetizer-div">
-  <h4>Appetizers</h4>
-  <!-- START ul.appetizers -->
-    <ul class="leaders">
-      <li><span>Egg Rolls (2)</span><span>3.95</span></li>
-      <li><span>Cream Cheese Wontons (6)</span><span>3.95</span></li>
-      <li><span>Fried Spring Rolls (2)</span><span>3.95</span></li>
-      <li><span>Chicken Wings (6)</span><span>5.95</span></li>
-      <li><span>Teriyaki Chicken Wings (6)</span><span>5.95</span></li>
-      <li><span>Fried Dumplings (6)</span><span>5.95</span></li>
-      <li><span>Steamed Dumplings (6)</span><span>5.95</span></li>
-      <li><span>BBQ Pork</span><span>5.95</span></li>
-      <li><span>Teriyaki Chicken (4)</span><span>6.95</span></li>
-      <li><span>Teriyaki Beef (4)</span><span>6.95</span></li>
-      <li><span>Fried Shrimp (6)</span><span>4.95</span></li>
-      <li><span>Fried Scallops (8)</span><span>4.95</span></li>
-      <li><span>Fried Tofu</span><span>4.95</span></li>
-      <li><span>Chicken Nuggets (10)</span><span>3.95</span></li>
-      <li><span>French Fries</span><span>3.95</span></li>
-      <li><span>Fried Sweet Doughnuts (10)</span><span>3.95</span></li>
-      <li><span>Fried Onion Rings</span><span>3.95</span></li>
-    </ul>
-  <!-- END ul.appetizers -->
-</div>
-
-<div class="menu-div fried-rice-div">
-  <h4>Fried Rice</h4>
-  <!-- START ul.fried-rice -->
-    <ul class="leaders">
-      <li><span>Vegetable</span><span>7.95</span></li>
-      <li><span>Chicken</span><span>8.95</span></li>
-      <li><span>Roast Pork</span><span>8.95</span></li>
-      <li><span>Beef</span><span>9.95</span></li>
-      <li><span>Shrimp</span><span>9.95</span></li>
-      <li><span>House &mdash; with Chicken, Roast Pork and Shrimp</span><span>10.95</span></li>
-      <li><span>Thai Pineapple &mdash; with Chicken and Shrimp</span><span>10.95</span></li>
-    </ul>
-  <!-- END ul.fried-rice -->
-</div>
-
-<div class="menu-div lo-mein-div">
-  <h4>Lo Mein</h4>
-  <p class="description">Lo Mein is made with soft noodles.</p>
-  <!-- START ul.lo-mein -->
-  <ul class="leaders">
-    <li><span>Plain</span><span>6.95</span></li>
-    <li><span>Vegetable</span><span>7.95</span></li>
-    <li><span>Chicken</span><span>8.95</span></li>
-    <li><span>Roast Pork</span><span>8.95</span></li>
-    <li><span>Beef</span><span>995</span></li>
-    <li><span>Shrimp</span><span>10.95</span></li>
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
-    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
-  </ul>
-  <!-- END ul.lo-mein -->
-</div>
-
-<div class="menu-div mai-fun-div">
-  <h4>Mai Fun</h4>
-  <!-- START ul.mai-fun -->
-  <ul class="leaders">
-    <li><span>Vegetable</span><span>7.95</span></li>
-    <li><span>Chicken</span><span>8.95</span></li>
-    <li><span>Roast Pork</span><span>8.95</span></li>
-    <li><span>Beef</span><span>9.95</span></li>
-    <li><span>Shrimp</span><span>10.95</span></li>
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Singapore &mdash; with Pork & Shrimp</span><span>10.95</span></li>
-    <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>11.95</span></li>
-    <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.96</span></li>
-  </ul>
-  <!-- END ul.mai-fun -->
-</div>
-
-<div class="menu-div chow-fun-div">
-  <h4>Chow Fun</h4>
-  <!-- START ul.chow-fun -->
-  <ul class="leaders">
-    <li><span>Vegetable</span><span>7.95</span></li>
-    <li><span>Chicken</span><span>8.95</span></li>
-    <li><span>Roast Pork</span><span>8.95</span></li>
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
-    <li><span>Shrimp</span><span>10.95</span></li>
-    <li><span>House &mdash; <i>with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
-    <li><span>Seafood &mdash; <i>with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
-  </ul>
-  <!-- END ul.chow-fun -->
-</div>
-
-<div class="menu-div kung-pao-div">
-  <h4>Kung Pao</h4>
-  <p class="description">Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
-  <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
-  <!-- START ul.kung-pao -->
-  <ul class="leaders">
-    <li><span>Fried Tofu</span><span>7.95</span></li>
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
-    <li><span>Roast Pork</span><span>8.95</span></li>
-    <li><span>Beef</span><span>9.95</span></li>
-    <li><span>Shrimp</span><span>10.95</span></li>
-  </ul>
-
-</div>
-
-<div class="menu-div kung-pao-div">
-  <h4>Szechuan</h4>
-  <p class="description">Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
-  <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
-  <!-- START ul.kung-pao -->
-  <ul class="leaders">
-    <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
-    <li><span>Roast Pork</span><span>8.95</span></li>
-    <li><span>Beef</span><span>9.95</span></li>
-    <li><span>Shrimp</span><span>10.95</span></li>
-  </ul>
-</div>
-
-<div class="menu-div chefs-special-div">
-  <h4>Chef's Specials</h4>
-  <p class="description">Chef's Special Dishes are served with White Rice.</p>
-  <!-- START ul.chefs-special -->
-  <ul class="leaders">
-    <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
-
-    <li><span class="dish">Lemon Chicken</span><span>10.95</span></li>
-
-    <li><span class="dish">Orange Chicken</span><span>10.95</span></li>
-
-    <li><span class="dish">Orange Shrimp</span><span>12.95</span></li>
-
-    <li><span class="dish">Happy Family<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
-
-    <li><span class="dish">Four Seasons<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
-
-    <li><span class="dish">Triple Crown<i class="dish-desc"> &mdash; Chicken, Beef and Shrimp with mixed vegetables in a brown sauce</i></span><span>13.95</span></li>
-
-    <li><span class="dish">Lover's Delight<i class="dish-desc"> &mdash; two dishes in one, Hunan Beef and General's Chicken</i></span><span>14.95</span></li>
-
-    <li><span class="dish">Salt and Pepper Squid<i class="dish-desc"> &mdash; Cantonese-style Calamari</i></span><span>14.95</span></li>
-
-    <li><span class="dish">Salt and Pepper Shrimp</span><span>14.95</span></li>
-
-    <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Dragon and Phoenix<i class="dish-desc"> &mdash; two dishes in one, General's Chicken and Hot and Spicy Shrimp</i></span><span>14.95</span></li>
-
-    <li><span class="dish">Seafood Pan Fried Noodles<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid with Mixed Vegetables on top of Crispy, Pan-fried Noodles in a Brown Sauce</i></span><span>17.95</span></li>
-
-    <li><span class="dish">Twin Cities Hunan Style<i class="dish-desc"> &mdash; Shrimp and Scallops stir-fry with Mixed Vegetables Hunan Style</i></span><span>16.95</span></li>
-
-    <li><span class="dish">Seafood Delight<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid stir fried with Mixed Vegetables</i></span><span>17.95</span></li>
-
-    <li><span class="dish">Seven Stars<i class="dish-desc"> &mdash; Chicken, Roast Pork, Crab Meat and Mixed Vegetables topped with seven Jumbo Fried Shrimp</i></span><span>16.95</span></li>
-
-    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
-
-    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
-
-    <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
 
 
-  </ul>
-</div>
+
 
 
 
