--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -59,12 +59,13 @@
 
 <!-- START .menu -->
 
-<img src="../images/delivery/sesame-chicken.jpg" alt="">
-
-<div class="row">
+<!-- <img src="../images/delivery/sesame-chicken.jpg" alt=""> -->
+<div class="menu-body">
+  <!-- START COLUMN 1 -->
   <div class="column">
+
     <div class="menu-div appetizer-div">
-      <h4>Appetizers</h4>
+      <h4 class='dish-style'>Appetizers</h4>
       <!-- START ul.appetizers -->
         <ul class="leaders">
           <li><span>Egg Rolls (2)</span><span>3.95</span></li>
@@ -89,7 +90,7 @@
     </div>
 
     <div class="menu-div fried-rice-div">
-      <h4>Fried Rice</h4>
+      <h4 class='dish-style'>Fried Rice</h4>
       <!-- START ul.fried-rice -->
         <ul class="leaders">
           <li><span>Vegetable</span><span>7.95</span></li>
@@ -104,8 +105,8 @@
     </div>
 
     <div class="menu-div lo-mein-div">
-      <h4>Lo Mein</h4>
-      <p class="description">Lo Mein is made with soft noodles.</p>
+      <h4 class='dish-style'>Lo Mein</h4>
+      <p class="dish-style-desc">Lo Mein is made with soft noodles.</p>
       <!-- START ul.lo-mein -->
       <ul class="leaders">
         <li><span>Plain</span><span>6.95</span></li>
@@ -121,7 +122,7 @@
     </div>
 
     <div class="menu-div mai-fun-div">
-      <h4>Mai Fun</h4>
+      <h4 class='dish-style'>Mai Fun</h4>
       <!-- START ul.mai-fun -->
       <ul class="leaders">
         <li><span>Vegetable</span><span>7.95</span></li>
@@ -137,7 +138,7 @@
     </div>
 
     <div class="menu-div chow-fun-div">
-      <h4>Chow Fun</h4>
+      <h4 class='dish-style'>Chow Fun</h4>
       <!-- START ul.chow-fun -->
       <ul class="leaders">
         <li><span>Vegetable</span><span>7.95</span></li>
@@ -152,12 +153,15 @@
     </div>
 
   </div>
+  <!-- END COLUMN 1 -->
 
+  <!-- START COLUMN 2 -->
   <div class="column">
+
     <div class="menu-div kung-pao-div">
-      <h4>Kung Pao</h4>
-      <p class="description">Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
-      <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+      <h4 class='dish-style'>Kung Pao</h4>
+      <p class="dish-style-desc">Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
+      <p class="dish-style-desc">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
       <!-- START ul.kung-pao -->
       <ul class="leaders">
         <li><span>Fried Tofu</span><span>7.95</span></li>
@@ -170,9 +174,9 @@
     </div>
 
     <div class="menu-div szechuan-div">
-      <h4>Szechuan</h4>
-      <p class="description">Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
-      <p class="description">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+      <h4 class='dish-style'>Szechuan</h4>
+      <p class="dish-style-desc">Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
+      <p class="dish-style-desc">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
       <!-- START ul.kung-pao -->
       <ul class="leaders">
         <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
@@ -183,51 +187,93 @@
     </div>
 
     <div class="menu-div chefs-special-div">
-      <h4>Chef's Specials</h4>
-      <p class="description">Chef's Special Dishes are served with White Rice.</p>
+      <h4 class='dish-style'>Chef's Specials</h4>
+      <p class="dish-style-desc">Chef's Special Dishes are served with White Rice.</p>
       <!-- START ul.chefs-special -->
       <ul class="leaders">
         <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
-
         <li><span class="dish">Lemon Chicken</span><span>10.95</span></li>
-
         <li><span class="dish">Orange Chicken</span><span>10.95</span></li>
-
         <li><span class="dish">Orange Shrimp</span><span>12.95</span></li>
-
         <li><span class="dish">Happy Family<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
-
         <li><span class="dish">Four Seasons<i class="dish-desc"> &mdash; Chicken, Beef, Shrimp, and Roast Pork with Mixed Vegetables in a Brown Sauce</i></span><span>14.95</span></li>
-
         <li><span class="dish">Triple Crown<i class="dish-desc"> &mdash; Chicken, Beef and Shrimp with mixed vegetables in a brown sauce</i></span><span>13.95</span></li>
-
         <li><span class="dish">Lover's Delight<i class="dish-desc"> &mdash; two dishes in one, Hunan Beef and General's Chicken</i></span><span>14.95</span></li>
-
         <li><span class="dish">Salt and Pepper Squid<i class="dish-desc"> &mdash; Cantonese-style Calamari</i></span><span>14.95</span></li>
-
         <li><span class="dish">Salt and Pepper Shrimp</span><span>14.95</span></li>
-
         <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Dragon and Phoenix<i class="dish-desc"> &mdash; two dishes in one, General's Chicken and Hot and Spicy Shrimp</i></span><span>14.95</span></li>
-
         <li><span class="dish">Seafood Pan Fried Noodles<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid with Mixed Vegetables on top of Crispy, Pan-fried Noodles in a Brown Sauce</i></span><span>17.95</span></li>
-
         <li><span class="dish">Twin Cities Hunan Style<i class="dish-desc"> &mdash; Shrimp and Scallops stir-fry with Mixed Vegetables Hunan Style</i></span><span>16.95</span></li>
-
         <li><span class="dish">Seafood Delight<i class="dish-desc"> &mdash; Shrimp, Scallops, Crab Meat and Squid stir fried with Mixed Vegetables</i></span><span>17.95</span></li>
-
         <li><span class="dish">Seven Stars<i class="dish-desc"> &mdash; Chicken, Roast Pork, Crab Meat and Mixed Vegetables topped with seven Jumbo Fried Shrimp</i></span><span>16.95</span></li>
+      </ul>
+      <!-- END ul.chefs-special -->
 
-        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
+    </div>
 
-        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
-
-        <li><span class="dish"><i class="dish-desc"> &mdash; </i></span><span></span></li>
-
+    <div class="menu-div pad-thai-div">
+      <h4 class='dish-style'>Pad Thai</h4>
+      <p class="dish-style-desc">Pad Thai is Rice Noodles stir fried with Eggs, Bean Sprouts, Green Onions, and Garlic all topped with roasted ground Peanuts.</p>
+      <!-- START ul.pad-thai -->
+      <ul class="leaders">
+        <li><span>Fried Tofu</span><span>8.95</span></li>
+        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>9.95</span></li>
+        <li><span>Roast Pork</span><span>9.95</span></li>
+        <li><span>Beef</span><span>10.95</span></li>
+        <li><span>Shrimp</span><span>11.95</span></li>
 
       </ul>
     </div>
 
+    <div class="menu-div cashew-div">
+      <h4 class='dish-style'>Cashew</h4>
+      <p class="dish-style-desc">Cashew style is stir fried with Vegetables topped with Cashews and served with White Rice.</p>
+      <!-- START ul.cashew -->
+      <ul class="leaders">
+        <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span class="dish">Roast Pork</span><span>8.95</span></li>
+        <li><span class="dish">Beef</span><span>9.95</span></li>
+        <li><span class="dish">Shrimp</span><span>10.95</span></li>
+      </ul>
+      <!-- END ul.cashew -->
+    </div>
+
+    <div class="menu-div curry-div">
+      <h4 class='dish-style'>Curry</h4>
+      <p class="dish-style-desc">Curry style is served with White Rice.</p>
+      <!-- START ul.curry -->
+      <ul class="leaders">
+        <li><span class="dish">Fried Tofu</span><span>8.95</span></li>
+        <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span class="dish">Roast Pork</span><span>8.95</span></li>
+        <li><span class="dish">Beef</span><span>9.95</span></li>
+        <li><span class="dish">Shrimp</span><span>10.95</span></li>
+      </ul>
+      <!-- END ul.curry -->
+    </div>
+
+    <div class="menu-div veggie-delight-div">
+      <h4 class='dish-style'>Veggie Delight</h4>
+      <p class="dish-style-desc">Veggie Delight is Brown Sauce stir fried Vegetables served with White Rice.</p>
+      <!-- START ul.veggie-delight -->
+      <ul class="leaders">
+        <li><span class="dish">Vegetable Delights<i class="dish-desc"> &mdash; Mixed Vegetables: Broccoli, Carrots, Green and Red Peppers, Onions, and Mushrooms</i></span><span>8.95</span></li>
+        <li><span class="dish">Tofu and Mixed Vegetables</span><span>8.95</span></li>
+        <li><span class="dish">General Tofu<i class="dish-desc"> &mdash; Deep-fried Tofu in our signature sweet and tangy General's Sauce</i></span><span>8.95</span></li>
+      </ul>
+      <!-- END ul.veggie-delight -->
+    </div>
+
   </div>
+  <!-- END COLUMN 2 -->
+
+</div>
+
+
+<div class="row">
+
+
+
 
 </div>
 <div class='menu'>
