--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -68,23 +68,23 @@
       <h4 class='dish-style'>Appetizers</h4>
       <!-- START ul.appetizers -->
         <ul class="leaders">
-          <li><span>Egg Rolls (2)</span><span>3.95</span></li>
-          <li><span>Cream Cheese Wontons (6)</span><span>3.95</span></li>
-          <li><span>Fried Spring Rolls (2)</span><span>3.95</span></li>
-          <li><span>Chicken Wings (6)</span><span>5.95</span></li>
-          <li><span>Teriyaki Chicken Wings (6)</span><span>5.95</span></li>
-          <li><span>Fried Dumplings (6)</span><span>5.95</span></li>
-          <li><span>Steamed Dumplings (6)</span><span>5.95</span></li>
-          <li><span>BBQ Pork</span><span>5.95</span></li>
-          <li><span>Teriyaki Chicken (4)</span><span>6.95</span></li>
-          <li><span>Teriyaki Beef (4)</span><span>6.95</span></li>
-          <li><span>Fried Shrimp (6)</span><span>4.95</span></li>
-          <li><span>Fried Scallops (8)</span><span>4.95</span></li>
-          <li><span>Fried Tofu</span><span>4.95</span></li>
-          <li><span>Chicken Nuggets (10)</span><span>3.95</span></li>
-          <li><span>French Fries</span><span>3.95</span></li>
-          <li><span>Fried Sweet Doughnuts (10)</span><span>3.95</span></li>
-          <li><span>Fried Onion Rings</span><span>3.95</span></li>
+          <li><span class='dish'>Egg Rolls<i class="dish-desc"> (2)</i></span><span>3.95</span></li>
+          <li><span class='dish'>Cream Cheese Wontons<i class="dish-desc"> (6)</i></span><span>3.95</span></li>
+          <li><span class='dish'>Fried Spring Rolls<i class="dish-desc"> (2)</i></span><span>3.95</span></li>
+          <li><span class='dish'>Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Teriyaki Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Fried Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Steamed Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>BBQ Pork</span><span>5.95</span></li>
+          <li><span class='dish'>Teriyaki Chicken<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
+          <li><span class='dish'>Teriyaki Beef<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
+          <li><span class='dish'>Fried Shrimp<i class="dish-desc"> (6)</i></span><span>4.95</span></li>
+          <li><span class='dish'>Fried Scallops<i class="dish-desc"> (8)</i></span><span>4.95</span></li>
+          <li><span class='dish'>Fried Tofu</span><span>4.95</span></li>
+          <li><span class='dish'>Chicken Nuggets<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
+          <li><span class='dish'>French Fries</span><span>3.95</span></li>
+          <li><span class='dish'>Fried Sweet Doughnuts<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
+          <li><span class='dish'>Fried Onion Rings</span><span>3.95</span></li>
         </ul>
       <!-- END ul.appetizers -->
     </div>
@@ -93,13 +93,13 @@
       <h4 class='dish-style'>Fried Rice</h4>
       <!-- START ul.fried-rice -->
         <ul class="leaders">
-          <li><span>Vegetable</span><span>7.95</span></li>
-          <li><span>Chicken</span><span>8.95</span></li>
-          <li><span>Roast Pork</span><span>8.95</span></li>
-          <li><span>Beef</span><span>9.95</span></li>
-          <li><span>Shrimp</span><span>9.95</span></li>
-          <li><span>House &mdash; with Chicken, Roast Pork and Shrimp</span><span>10.95</span></li>
-          <li><span>Thai Pineapple &mdash; with Chicken and Shrimp</span><span>10.95</span></li>
+          <li><span class='dish'>Vegetable</span><span>7.95</span></li>
+          <li><span class='dish'>Chicken</span><span>8.95</span></li>
+          <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+          <li><span class='dish'>Beef</span><span>9.95</span></li>
+          <li><span class='dish'>Shrimp</span><span>9.95</span></li>
+          <li><span class='dish'>House<i class="dish-desc"> &mdash; with Chicken, Roast Pork and Shrimp</i></span><span>10.95</span></li>
+          <li><span class='dish'>Thai Pineapple<i class="dish-desc"> &mdash; with Chicken and Shrimp</i></span><span>10.95</span></li>
         </ul>
       <!-- END ul.fried-rice -->
     </div>
@@ -109,14 +109,14 @@
       <p class="dish-style-desc">Lo Mein is made with soft noodles.</p>
       <!-- START ul.lo-mein -->
       <ul class="leaders">
-        <li><span>Plain</span><span>6.95</span></li>
-        <li><span>Vegetable</span><span>7.95</span></li>
-        <li><span>Chicken</span><span>8.95</span></li>
-        <li><span>Roast Pork</span><span>8.95</span></li>
-        <li><span>Beef</span><span>995</span></li>
-        <li><span>Shrimp</span><span>10.95</span></li>
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> House &mdash; with Chicken, Roast Pork & Shrimp</span><span>10.95</span></li>
-        <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.95</span></li>
+        <li><span class='dish'>Plain</span><span>6.95</span></li>
+        <li><span class='dish'>Vegetable</span><span>7.95</span></li>
+        <li><span class='dish'>Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+        <li><span class='dish'>Beef</span><span>995</span></li>
+        <li><span class='dish'>Shrimp</span><span>10.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> House<i class="dish-desc"> &mdash; with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
+        <li><span class='dish'>Seafood<i class="dish-desc"> &mdash; with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
       </ul>
       <!-- END ul.lo-mein -->
     </div>
@@ -125,14 +125,14 @@
       <h4 class='dish-style'>Mai Fun</h4>
       <!-- START ul.mai-fun -->
       <ul class="leaders">
-        <li><span>Vegetable</span><span>7.95</span></li>
-        <li><span>Chicken</span><span>8.95</span></li>
-        <li><span>Roast Pork</span><span>8.95</span></li>
-        <li><span>Beef</span><span>9.95</span></li>
-        <li><span>Shrimp</span><span>10.95</span></li>
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Singapore &mdash; with Pork & Shrimp</span><span>10.95</span></li>
-        <li><span>House &mdash; with Chicken, Roast Pork & Shrimp</span><span>11.95</span></li>
-        <li><span>Seafood &mdash; with Shrimp, Crab Meat & Squid</span><span>12.96</span></li>
+        <li><span class='dish'>Vegetable</span><span>7.95</span></li>
+        <li><span class='dish'>Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+        <li><span class='dish'>Beef</span><span>9.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>10.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Singapore<i class="dish-desc"> &mdash; with Pork & Shrimp</i></span><span>10.95</span></li>
+        <li><span class='dish'>House<i class="dish-desc"> &mdash; with Chicken, Roast Pork & Shrimp</i></span><span>11.95</span></li>
+        <li><span class='dish'>Seafood<i class="dish-desc"> &mdash; with Shrimp, Crab Meat & Squid</i></span><span>12.96</span></li>
       </ul>
       <!-- END ul.mai-fun -->
     </div>
@@ -141,13 +141,13 @@
       <h4 class='dish-style'>Chow Fun</h4>
       <!-- START ul.chow-fun -->
       <ul class="leaders">
-        <li><span>Vegetable</span><span>7.95</span></li>
-        <li><span>Chicken</span><span>8.95</span></li>
-        <li><span>Roast Pork</span><span>8.95</span></li>
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
-        <li><span>Shrimp</span><span>10.95</span></li>
-        <li><span>House &mdash; <i>with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
-        <li><span>Seafood &mdash; <i>with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
+        <li><span class='dish'>Vegetable</span><span>7.95</span></li>
+        <li><span class='dish'>Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Beef</span><span>10.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>10.95</span></li>
+        <li><span class='dish'>House<i class="dish-desc"> &mdash; with Chicken, Roast Pork & Shrimp</i></span><span>10.95</span></li>
+        <li><span class='dish'>Seafood<i class="dish-desc"> &mdash; with Shrimp, Crab Meat & Squid</i></span><span>12.95</span></li>
       </ul>
       <!-- END ul.chow-fun -->
     </div>
@@ -164,11 +164,11 @@
       <p class="dish-style-desc">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
       <!-- START ul.kung-pao -->
       <ul class="leaders">
-        <li><span>Fried Tofu</span><span>7.95</span></li>
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
-        <li><span>Roast Pork</span><span>8.95</span></li>
-        <li><span>Beef</span><span>9.95</span></li>
-        <li><span>Shrimp</span><span>10.95</span></li>
+        <li><span class='dish'>Fried Tofu</span><span>7.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+        <li><span class='dish'>Beef</span><span>9.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>10.95</span></li>
       </ul>
 
     </div>
@@ -179,10 +179,10 @@
       <p class="dish-style-desc">Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
       <!-- START ul.kung-pao -->
       <ul class="leaders">
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
-        <li><span>Roast Pork</span><span>8.95</span></li>
-        <li><span>Beef</span><span>9.95</span></li>
-        <li><span>Shrimp</span><span>10.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
+        <li><span class='dish'>Beef</span><span>9.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>10.95</span></li>
       </ul>
     </div>
 
@@ -216,11 +216,11 @@
       <p class="dish-style-desc">Pad Thai is Rice Noodles stir fried with Eggs, Bean Sprouts, Green Onions, and Garlic all topped with roasted ground Peanuts.</p>
       <!-- START ul.pad-thai -->
       <ul class="leaders">
-        <li><span>Fried Tofu</span><span>8.95</span></li>
-        <li><span><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>9.95</span></li>
-        <li><span>Roast Pork</span><span>9.95</span></li>
-        <li><span>Beef</span><span>10.95</span></li>
-        <li><span>Shrimp</span><span>11.95</span></li>
+        <li><span class='dish'>Fried Tofu</span><span>8.95</span></li>
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>9.95</span></li>
+        <li><span class='dish'>Roast Pork</span><span>9.95</span></li>
+        <li><span class='dish'>Beef</span><span>10.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>11.95</span></li>
 
       </ul>
     </div>
