--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -1,7 +1,7 @@
 /* MENU BODY */
 
 .menu-body {
-  width: 80%;
+  width: 65%;
   margin: 0 auto;
   /*border: 1px purple solid;*/
 }
@@ -35,6 +35,7 @@
 .dish-style {
   margin: 0;
   font-size: 1.15em;
+  color: #7A0309;
 }
 
 .dish-style-desc {
@@ -53,6 +54,7 @@
   height: 16px;
   width: 16px;
   vertical-align: bottom;
+  margin-left: -1.4em;
 }
 
 .dish {
@@ -64,18 +66,18 @@
   font-size: .9em;
 }
 
-/* LEADERS */
+/**** LEADERS ****/
 
 ul.leaders {
   max-width: 100%;
   overflow-x: hidden;
   list-style: none;
-  font-weight: 400;
   font-size: .85em;
+  font-weight: 400;
   color: #3f454d;
   /*line-height: 18px;*/
   margin-top: .4em;
-  border: 2pt green solid
+  /*border: 2pt green solid*/
 }
 
 ul.leaders li:after {
@@ -100,10 +102,10 @@ ul.leaders span+span {
 
 ul.leaders li {
   margin-bottom: .6em;
-  margin-left: 0;
-  padding: 0;
+  margin-left: -1.55em;
+  /*padding: 0;*/
   /*max-width: 100%;*/
-  border: 1pt blue solid
+  /*border: 1pt blue solid*/
 }
 
 /* IMAGES */
@@ -111,4 +113,10 @@ ul.leaders li {
 img {
   height: 10em;
   width: 10em;
+}
+
+li {
+  margin-left: 0;
+  padding: 0;
+  margin: 0 auto;
 }
