--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -71,20 +71,20 @@
           <li><span class='dish'>Egg Rolls<i class="dish-desc"> (2)</i></span><span>3.95</span></li>
           <li><span class='dish'>Cream Cheese Wontons<i class="dish-desc"> (6)</i></span><span>3.95</span></li>
           <li><span class='dish'>Fried Spring Rolls<i class="dish-desc"> (2)</i></span><span>3.95</span></li>
-          <li><span class='dish'>Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
-          <li><span class='dish'>Teriyaki Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
-          <li><span class='dish'>Fried Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
-          <li><span class='dish'>Steamed Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
-          <li><span class='dish'>BBQ Pork</span><span>5.95</span></li>
-          <li><span class='dish'>Teriyaki Chicken<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
-          <li><span class='dish'>Teriyaki Beef<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
+          <li><span class='dish'>Fried Sweet Doughnuts<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
+          <li><span class='dish'>Chicken Nuggets<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
+          <li><span class='dish'>French Fries</span><span>3.95</span></li>
+          <li><span class='dish'>Fried Onion Rings</span><span>3.95</span></li>
           <li><span class='dish'>Fried Shrimp<i class="dish-desc"> (6)</i></span><span>4.95</span></li>
           <li><span class='dish'>Fried Scallops<i class="dish-desc"> (8)</i></span><span>4.95</span></li>
           <li><span class='dish'>Fried Tofu</span><span>4.95</span></li>
-          <li><span class='dish'>Chicken Nuggets<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
-          <li><span class='dish'>French Fries</span><span>3.95</span></li>
-          <li><span class='dish'>Fried Sweet Doughnuts<i class="dish-desc"> (10)</i></span><span>3.95</span></li>
-          <li><span class='dish'>Fried Onion Rings</span><span>3.95</span></li>
+          <li><span class='dish'>Steamed Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Fried Dumplings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Teriyaki Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>Chicken Wings<i class="dish-desc"> (6)</i></span><span>5.95</span></li>
+          <li><span class='dish'>BBQ Pork</span><span>5.95</span></li>
+          <li><span class='dish'>Teriyaki Chicken<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
+          <li><span class='dish'>Teriyaki Beef<i class="dish-desc"> (4)</i></span><span>6.95</span></li>
         </ul>
       <!-- END ul.appetizers -->
     </div>
@@ -152,11 +152,17 @@
       <!-- END ul.chow-fun -->
     </div>
 
-  </div>
-  <!-- END COLUMN 1 -->
-
-  <!-- START COLUMN 2 -->
-  <div class="column">
+    <div class="menu-div sweet-sour-div">
+      <h4 class='dish-style'>Sweet and Sour</h4>
+      <p class="dish-style-desc">Sweet and Sour style is served with White Rice.</p>
+      <!-- START ul.sweet-sour -->
+      <ul class="leaders">
+        <li><span class='dish'><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> Chicken</span><span>8.95</span></li>
+        <li><span class='dish'>Pork</span><span>8.95</span></li>
+        <li><span class='dish'>Shrimp</span><span>8.95</span></li>
+      </ul>
+      <!-- END ul.sweet-sour -->
+    </div>
 
     <div class="menu-div kung-pao-div">
       <h4 class='dish-style'>Kung Pao</h4>
@@ -170,8 +176,16 @@
         <li><span class='dish'>Beef</span><span>9.95</span></li>
         <li><span class='dish'>Shrimp</span><span>10.95</span></li>
       </ul>
-
     </div>
+
+
+  </div>
+  <!-- END COLUMN 1 -->
+
+  <!-- START COLUMN 2 -->
+  <div class="column">
+
+
 
     <div class="menu-div szechuan-div">
       <h4 class='dish-style'>Szechuan</h4>
@@ -188,7 +202,7 @@
 
     <div class="menu-div chefs-special-div">
       <h4 class='dish-style'>Chef's Specials</h4>
-      <p class="dish-style-desc">Chef's Special Dishes are served with White Rice.</p>
+      <p class="dish-style-desc">Chef's Special dishes are served with White Rice.</p>
       <!-- START ul.chefs-special -->
       <ul class="leaders">
         <li><span class="dish"><img src="../images/chef-recommendation-6.png" alt="" class="chef-rec"> General's Chicken</span><span>10.95</span></li>
