--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -46,7 +46,6 @@
     </div>
     <!-- END .header -->
 
-    <div class='content menu'>
       <h2>Delivery Menu</h2>
       <h4>Delivery Subject to Availability and following Restrictions:</h4>
       <ul>
@@ -58,8 +57,6 @@
 
 
 <!-- START .menu -->
-
-<!-- <img src="../images/delivery/sesame-chicken.jpg" alt=""> -->
 <div class="menu-body">
   <!-- START COLUMN 1 -->
   <div class="column">
@@ -282,35 +279,8 @@
   <!-- END COLUMN 2 -->
 
 </div>
+<!-- END .menu -->
 
-
-<div class="row">
-
-
-
-
-</div>
-<div class='menu'>
-
-
-
-
-
-
-
-
-
-
-
-
-</div>
-
-
-
-
-
-
-    </div>
 
   </body>
 </html>
