Add data to menu-catering.html and menu-dine-in.html; Add Rokkitt font link

--- a/public/styles/menu.css
+++ b/public/styles/menu.css
@@ -44,8 +44,10 @@
 .dish-style {
   margin: 0;
   padding-left: 2px;
-  font-size: 1.15em;
+  font-size: 1.75em;
+  font-weight: bold;
   color: #7A0309;
+  font-family: Rokkitt, Arial, Helvetica, sans-serif;
 }
 
 .dish-style-desc {
