--- a/public/views/menu-delivery.html
+++ b/public/views/menu-delivery.html
@@ -8,6 +8,10 @@
     <!-- VENDOR LINKS -->
 
 
+    <!-- FONTS -->
+    <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
+
+
     <!-- STYLESHEETS -->
     <link rel='stylesheet' href='../styles/normalize.css'>
     <link rel='stylesheet' href='../styles/main.css'>
