--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2,21 +2,6 @@
   font-family: Helvetica, Arial, sans-serif;
 }
 
-table, thead, tr, th, tbody, td {
-  margin: 0;
-  padding: 0;
-  border-collapse: collapse;
-  border: 1px black solid;
-  text-align: left;
-}
-
-td {
-  font-weight: : 400;
-  font-size: 13px;
-  line-height: 15px;
-  color: #827762;
-}
-
 .nav-wrapper {
   width: 100%;
   background-color: #D3D3D3;
@@ -46,4 +31,10 @@ td {
 
 .active {
   background-color: #4CAF50;
+}
+
+h1 {
+  font-family: Rokkitt, Arial, Helvetica, sans-serif;
+  font-size: 42px;
+  font-weight: 700;
 }
