--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,10 +3,19 @@
 }
 
 .nav-wrapper {
-  width: 100%;
-  background-color: #D3D3D3;
+  width: 65%;
+  background-color: #520103;
+  border-top: 5px #751E20 solid;
   position: fixed;
   display: block;
+  margin: 0 auto;
+}
+
+.nav {
+  width: 65%;
+  margin: 0 auto;
+  background-color: #520103;
+  border-top: 5px #751E20 solid;
 }
 
 .nav-top {
@@ -16,6 +25,7 @@
 
 .nav-top>li {
   float: left;
+  color: #fff;
 }
 
 .nav-top>li>a {
@@ -23,6 +33,7 @@
   text-align: center;
   text-decoration: none;
   padding: 10px 10px;
+  color: #fff;
 }
 
 .nav-top>li>a:hover:not(.active) {
@@ -33,8 +44,24 @@
   background-color: #4CAF50;
 }
 
-h1 {
+.header {
+  width: 100%;
+  background-color: #7A0309;
+  margin: 0 auto;
+  padding: 0 auto;
+  height: 10em;
+}
+
+h1, h2 {
   font-family: Rokkitt, Arial, Helvetica, sans-serif;
   font-size: 42px;
   font-weight: 700;
+  color: #fff;
+  text-align: center;
+  text-decoration: none;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: 500;
 }
