--- a/public/views/index.html
+++ b/public/views/index.html
@@ -8,6 +8,7 @@
     <script src='../vendors/bootstrap/js/bootstrap.min.js' charset='utf-8'></script>
     <link rel='stylesheet' href='../vendors/bootstrap/css/bootstrap.min.css'>
     <link rel='stylesheet' href='../styles/menu-bs.css'>
+    <link href="https://fonts.googleapis.com/css?family=Rokkitt" rel="stylesheet">
 
 
 
@@ -28,7 +29,7 @@
         </div>
     </div>
 
-    <div class='menu-body'>
+    <div class='menu-body menu-full'>
 
       <!-- MENU HEADER -->
       <div class='row menu'>
@@ -47,13 +48,13 @@
       <!-- MENU -->
       <div class='row menu'>
         <!-- START: div.col-1 -->
-        <div class='menu-col-1 col-md-offset-2 col-md-4'>
+        <div class='menu-col-1 col-md-offset-2 col-md-6'>
 
           <!-- START: div.appetizers -->
-          <div class='menu-div appetizer-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Appetizers</h4>
               <!-- START: ul.appetizers -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'>Egg Rolls<i class='dish-desc'> (2)</i></span><span>3.95</span></li>
                 <li><span class='dish'>Cream Cheese Wontons<i class='dish-desc'> (6)</i></span><span>3.95</span></li>
                 <li><span class='dish'>Fried Spring Rolls<i class='dish-desc'> (2)</i></span><span>3.95</span></li>
@@ -77,10 +78,10 @@
           <!-- END: div.appertizers -->
 
           <!-- START: div.fried-rice -->
-          <div class='menu-div fried-rice-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Fried Rice</h4>
             <!-- START: ul.fried-rice -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'>Vegetable</span><span>7.95</span></li>
               <li><span class='dish'>Chicken</span><span>8.95</span></li>
               <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
@@ -94,11 +95,11 @@
           <!-- END: div.fried-rice -->
 
           <!-- START: div.lo-mein -->
-          <div class='menu-div lo-mein-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Lo Mein</h4>
             <p class='dish-style-desc'>Lo Mein is made with soft noodles.</p>
             <!-- START ul.lo-mein -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'>Plain</span><span>6.95</span></li>
               <li><span class='dish'>Vegetable</span><span>7.95</span></li>
               <li><span class='dish'>Chicken</span><span>8.95</span></li>
@@ -113,10 +114,10 @@
           <!-- END: div.lo-mein -->
 
           <!-- START: div.mai-fun -->
-          <div class='menu-div mai-fun-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Mai Fun</h4>
             <!-- START: ul.mai-fun -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'>Vegetable</span><span>7.95</span></li>
               <li><span class='dish'>Chicken</span><span>8.95</span></li>
               <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
@@ -131,10 +132,10 @@
           <!-- END: div.mai-fun -->
 
           <!-- START: div.chow-fun -->
-          <div class='menu-div chow-fun-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Chow Fun</h4>
             <!-- START: ul.chow-fun -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'>Vegetable</span><span>7.95</span></li>
               <li><span class='dish'>Chicken</span><span>8.95</span></li>
               <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
@@ -148,11 +149,11 @@
           <!-- END: div.chow-fun -->
 
           <!-- START: div.sweet-sour -->
-          <div class='menu-div sweet-sour-div'>
+          <div class='menu-div'>
             <h4 class='dish-style'>Sweet and Sour</h4>
             <p class='dish-style-desc'>Sweet and Sour style is served with White Rice.</p>
             <!-- START: ul.sweet-sour -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>8.95</span></li>
               <li><span class='dish'>Pork</span><span>8.95</span></li>
               <li><span class='dish'>Shrimp</span><span>8.95</span></li>
@@ -165,10 +166,10 @@
           <div class='menu-div kung-pao-div'>
             <h4 class='dish-style'>Kung Pao</h4>
             <p class='dish-style-desc'>Kung Pao style is a spicy stir-fry dish topped with Peanuts and served with White Rice.</p>
-            <p class='dish-style-desc'>Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+            <!-- <p class='dish-style-desc'>Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p> -->
 
             <!-- START ul.kung-pao -->
-            <ul class='leaders'>
+            <ul class='menu-grp'>
               <li><span class='dish'>Fried Tofu</span><span>7.95</span></li>
               <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>8.95</span></li>
               <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
@@ -183,13 +184,13 @@
         <!-- END: div.col-1 -->
 
         <!-- START: div.col-2 -->
-          <div class='menu-col-2 col-md-4'>
+          <div class='menu-col-2 col-md-6'>
             <div class='menu-div szechuan-div'>
               <h4 class='dish-style'>Szechuan</h4>
               <p class='dish-style-desc'>Szechuan style is a Red Chili-based sauce stir fried with Vegetables and served with White Rice.</p>
-              <p class='dish-style-desc'>Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p>
+              <!-- <p class='dish-style-desc'>Specify the level of spiciness from 1 to 5; 1 is not spicy, 5 is extra spicy.</p> -->
               <!-- START ul.kung-pao -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>8.95</span></li>
                 <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
                 <li><span class='dish'>Beef</span><span>9.95</span></li>
@@ -201,7 +202,7 @@
               <h4 class='dish-style'>Chef's Specials</h4>
               <p class='dish-style-desc'>Chef's Special dishes are served with White Rice.</p>
               <!-- START ul.chefs-special -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> General's Chicken</span><span>10.95</span></li>
                 <li><span class='dish'>Lemon Chicken</span><span>10.95</span></li>
                 <li><span class='dish'>Orange Chicken</span><span>10.95</span></li>
@@ -226,7 +227,7 @@
               <h4 class='dish-style'>Pad Thai</h4>
               <p class='dish-style-desc'>Pad Thai is Rice Noodles stir fried with Eggs, Bean Sprouts, Green Onions, and Garlic all topped with roasted ground Peanuts.</p>
               <!-- START ul.pad-thai -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'>Fried Tofu</span><span>8.95</span></li>
                 <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>9.95</span></li>
                 <li><span class='dish'>Roast Pork</span><span>9.95</span></li>
@@ -240,7 +241,7 @@
               <h4 class='dish-style'>Cashew</h4>
               <p class='dish-style-desc'>Cashew style is stir fried with Vegetables topped with Cashews and served with White Rice.</p>
               <!-- START ul.cashew -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>8.95</span></li>
                 <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
                 <li><span class='dish'>Beef</span><span>9.95</span></li>
@@ -253,7 +254,7 @@
               <h4 class='dish-style'>Curry</h4>
               <p class='dish-style-desc'>Curry style is served with White Rice.</p>
               <!-- START ul.curry -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'>Fried Tofu</span><span>8.95</span></li>
                 <li><span class='dish'><img src='../images/chef-recommendation-6.png' alt='' class='chef-rec'> Chicken</span><span>8.95</span></li>
                 <li><span class='dish'>Roast Pork</span><span>8.95</span></li>
@@ -267,7 +268,7 @@
               <h4 class='dish-style'>Veggie Delight</h4>
               <p class='dish-style-desc'>Veggie Delight is Brown Sauce stir fried Vegetables served with White Rice.</p>
               <!-- START ul.veggie-delight -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'>Vegetable Delights<i class='dish-desc'> &mdash; Mixed Vegetables: Broccoli, Carrots, Green and Red Peppers, Onions, and Mushrooms</i></span><span>8.95</span></li>
                 <li><span class='dish'>Tofu and Mixed Vegetables</span><span>8.95</span></li>
                 <li><span class='dish'>General Tofu<i class='dish-desc'> &mdash; Deep-fried Tofu in our signature sweet and tangy General's Sauce</i></span><span>8.95</span></li>
@@ -279,7 +280,7 @@
               <h4 class='dish-style'>Beverages</h4>
               <p class='dish-style-desc'>All beverages for delivery are 20 fl. oz. bottled soft drinks.</p>
               <!-- START ul.beverages -->
-              <ul class='leaders'>
+              <ul class='menu-grp'>
                 <li><span class='dish'>Pepsi</span><span>2.50</span></li>
                 <li><span class='dish'>Diet Pepsi</span><span>2.50</span></li>
                 <li><span class='dish'>Mountain Dew</span><span>2.50</span></li>
